// SPDX-FileCopyrightText: Copyright (c) 2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
// SPDX-License-Identifier: Apache-2.0
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
// http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package workflows.v1;

import "workflow.proto";
import "forge_carbide.proto";
import "google/protobuf/timestamp.proto";

option go_package = "github.com/nvidia/carbide-rest/workflow-schema/proto";

// VpcPrefixInventory - inventory info for all VpcPrefixes periodically collected
message VpcPrefixInventory {
  // List of VpcPrefixes
  repeated forge.VpcPrefix vpc_prefixes = 1;
  // Reported timestamp of inventory
  google.protobuf.Timestamp timestamp = 2;
  // Status of Inventory
  InventoryStatus inventory_status = 3;
  // Message for status
  string status_msg = 4;
  // Inventory page information
  InventoryPage inventory_page = 5;
}
